--- a/index.html
+++ b/index.html
@@ -19,9 +19,17 @@
                 <li><a href="">Log in</a></li>
             </ul>
         </nav>
-    
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-title">Start your Journey as 
+                    Influencer</h1>
+                <p class="banner-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                <button class="btn-primary">Preebook now</button>
+            </div>
+            <img class="camera-pic" src="images/main-camera.png" alt="">
 
-    </header>
+        </div>
+     </header>
 
     <main>
 
